<resources>
    <string name="app_name">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Signup</string>

    <string name="Login">Login</string>
    <string name="Signup">Signup</string>

    <string name="other_login_way">other ways</string>

    <string name="username">未登录</string>
    <string name="email">点击头像登录</string>

    <string name="toolbar_profile">Profile</string>
</resources>