<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/guideline_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Hello Everybody!"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Welcome back"
        android:textSize="14sp"
        android:textColor="@color/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="@color/hint_text_color"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        android:background="@drawable/input_drawable" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        android:maxLines="1"
        android:textColorHint="@color/hint_text_color"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:background="@drawable/input_drawable" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textColor="@color/forget_password_text_color"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textColor="@color/md_theme_light_primary"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/md_theme_light_primary"
        android:textColor="@color/white"
        android:text="@string/Login"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_other_login_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/left_gradient_line"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_marginHorizontal="8dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:text="@string/other_login_way"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/right_gradient_line"
            android:layout_weight="1"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/ll_other_login_way"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_google"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icons_google"/>

        <ImageButton
            android:id="@+id/ib_facebook"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icons_facebook"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>
